--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,19 +10,18 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="#FF0000"
         android:text="안녕하세요" />
 
     <TextView
         android:layout_width="wrap_content"
+        android:textSize="25sp"
         android:layout_height="wrap_content"
         android:text="저는 박호준입니다."/>
     <TextView
+        android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="잘 부탁드립니다."/>
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="어서오세요!"/>
 
 </LinearLayout>
